Fix position sticky by replacing overflow-x hidden with clip on html and body

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -73,7 +73,7 @@ html {
 html,
 body {
   max-width: 100%;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 h1, h2, h3, h4, h5, h6 {
